added who released an album in album view

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script src="render.js"></script>
     <link rel="stylesheet" href="index.css">
   </head>
-  <body>
+  <body onload="load()">
     <nav>
       <div class="nav-wrapper blue-grey darken-3">
         <a href="#" class="left brand-logo fixP"> Song Database</a>
