--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
           <li><button onClick="getAllSongs()" class="btn fixP">Songs</button></li>
           <li><button onClick="getAllArtists()" class="btn fixP">Artists</button></li>
           <li><button onClick="getAllAlbums()" class="btn fixP">Albums</button></li>
-          <li  class="fixP"><input placeholder="Username" id="Username" type="text" class="white-text"></li>
-          <li  class="fixP"><button onClick="setUsername()" id="loginBTN"  class='btn'>login</button></li>
+          <li  id = 'login' class="fixP"><button onClick="loginBTN()" id="loginBTN"  class='btn'>login</button></li>
+          <li  id = 'signup' class="fixP"><button onClick="SignUpBTN()" id="loginBTN"  class='btn'>SignUP</button></li>
         </ul>
       </div>
     </nav>
@@ -39,8 +39,6 @@
               <li class="collection-item">Alvin</li>
               <li class="collection-item">Alvin</li>
               <li class="collection-item">Alvin</li>
-             
-
             </ul>
           </div>
         </div>
