--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
       <div class = "col s3">
         <div class="card blue-grey darken-1 ">
           <div class="card-content white-text maxHeightFix">
+            <a id="createPlayListButton"></a>
             <h5 id="leftTitle" class="center-align">playlists</h2>
             <ul id="leftList" class="collection with-header cardList">
               <li class="collection-item">Alvin</li>
