added finishing touches

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>database project</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -25,7 +25,7 @@
           <li><button onClick="getAllArtists()" class="btn fixP">Artists</button></li>
           <li><button onClick="getAllAlbums()" class="btn fixP">Albums</button></li>
           <li  id = 'login' class="fixP"><button onClick="loginBTN()" id="loginBTN"  class='btn'>login</button></li>
-          <li  id = 'signup' class="fixP"><button onClick="SignUpBTN()" id="loginBTN"  class='btn'>SignUP</button></li>
+          <li  id = 'signup' class="fixP"><button onClick="SignUpBTN()" id="signupBTN"  class='btn'>SignUP</button></li>
         </ul>
       </div>
     </nav>
